# uauth_boost

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  start.sh
build_scripts/linux/: build_astra_ce.sh  build_astra_ce_x64.sh  build_astra_se.sh  build_ubuntu_20.sh  build_ubuntu_20_x64.sh
uaclient/: CMakeLists.txt
uaserver/: CMakeLists.txt
uaserver/doc/: curl.txt
uaserver/src/: bootloader.cpp  bootloader.h  defines.h  main.cpp
uaserver/src/dbase/: dbase_handler.cpp  dbase_handler.h
uaserver/src/network/: http_handler.cpp  http_handler.h  http_server.cpp  http_server.h
uaserver/src/settings/: app_settings.cpp
uaserver/src/ucontrol/: https_client.cpp  https_client.h
uaserver/src/x509/: x509_generator.cpp  x509_generator.h
uashell/: CMakeLists.txt
uashell/src/: main.cpp
uatables/: CMakeLists.txt
uatables/src/: main.cpp
uauth_client/: CMakeLists.txt
uauth_server/: CMakeLists.txt
uauth_server/doc/: curl.txt
uauth_server/src/: bootloader.cpp  bootloader.h  defines.h  main.cpp
uauth_server/src/dbase/: dbase_handler.cpp  dbase_handler.h
uauth_server/src/network/: http_handler.cpp  http_handler.h  http_server.cpp  http_server.h  http_session.cpp  http_session.h  http_uauth_handler.cpp  http_uauth_handler.h  http_uauth_server.cpp  http_uauth_server.h  http_uauth_session.cpp  http_uauth_session.h
uauth_server/src/settings/: app_settings.cpp  app_settings.h
uauth_server/src/ucontrol/: https_client.cpp  https_client.h  uc_controller.cpp  uc_controller.h
uauth_server/src/x509/: x509_generator.cpp  x509_generator.h
